[package]
name = "cynthia-macros"
version = "0.0.2"
edition = "2018"
license = "MIT/Apache-2.0"
description = """
cynthia's proc macros.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.7"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
cynthia = { version = "0.0.2" }
