[package]
name = "cynthia"
version = "0.0.3"
authors = ["inkhare <iapricot@foxmail.com>"]
description = "A high performance asynchronous programming runtime for Rust."
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["asynchronous", "runtime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "pin-project-lite", "macros"]

full = [
    "macros",
]

macros = ["cynthia-macros"]
std = ["alloc", "futures-io", "memchr/std"]
alloc = [
    "futures-core/alloc",
    "pin-project-lite",
]

[dependencies]
cynthia-macros = { version = "0.0.2", optional = true }
bytes = "1.0.0"
futures-core = { version = "0.3.5", default-features = false }
futures-sink = "0.3.0"
futures-io = { version = "0.3.5", optional = true }
futures-util = { version = "0.3", default-features = false }
byte-pool = "0.2.2"
lazy_static = "1.4.0"
httparse = "1.3.4"
memchr = { version = "2.3.3", default-features = false }
infer = "0.2.3"
pin-project-lite = { version = "0.2.0", optional = true }
pin-project = "1.0.2"
log = "0.4.11"
tracing = { version = "0.1.13", default-features = false, features = ["std"] }
anyhow = "1.0.26"
url = { version = "2.1.1", features = ["serde"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_qs = "0.7.0"
serde_json = "1.0.51"
serde_urlencoded = "0.7.0"
native-tls = "0.2.3"
thiserror = "1.0.9"
http = "0.2"
cfg-if = "1"
once_cell = "1.4.1"
signal-hook = "0.1.16"
libc = "0.2.78"
fnv = "1.0.5"
slab = "0.4.2"
indexmap = "1.0"
tracing-futures = "0.2.5"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.78"

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = { version = "0.9", default-features = false }
nix = "0.21"
timerfd = "1.1.1"

[package.metadata.playground]
features = ["full"]