[package]
name = "cynthia"
version = "0.0.3"
authors = ["inkhare <iapricot@foxmail.com>"]
description = "A high performance asynchronous programming runtime for Rust."
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["asynchronous", "runtime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "pin-project-lite", "macros"]

full = [
    "macros",
]

macros = ["cynthia-macros"]
std = ["alloc", "futures-io", "memchr/std"]
alloc = [
    "futures-core/alloc",
    "pin-project-lite",
]

[dependencies]
crossbeam-queue = "0.3.1"
stable_deref_trait = "1.1.1"
cynthia-macros = { version = "0.0.2", optional = true }
futures-core = { version = "0.3.5", default-features = false }
futures-io = { version = "0.3.5", optional = true }
memchr = { version = "2.3.3", default-features = false }
pin-project-lite = { version = "0.2.0", optional = true }
cfg-if = "1"
once_cell = "1.4.1"
signal-hook = "0.1.16"
libc = "0.2.78"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.78"

[target.'cfg(target_os = "linux")'.dev-dependencies]
inotify = { version = "0.9", default-features = false }
timerfd = "1.1.1"
